# Graphics-Test-4

./: CMakeLists.txt  README.md  run.sh
lib/: stb_image.h
lib/shaders/: defaultFragment.glsl  defaultVertex.glsl  fragment.glsl  lightFragment.glsl  lightVertex.glsl
src/: camera.cpp  main.cpp  model.cpp  objects.cpp  shader.cpp  texture.cpp
src/include/: camera.h  model.h  objects.h  shader.h  texture.h
